--- a/update_dist.yml
+++ b/update_dist.yml
@@ -2,11 +2,19 @@
   become: true
   become_user: root
   tasks:
+# Upgrade RHEL family OS packages
+    - name: Upgrade RHEL Family OS packages
+      yum:
+        name: '*'
+        state: latest
+      when: ansible_os_family == "RedHat"
     - name: Update apt repo and cache on all Debian/Ubuntu boxes
       apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
+      when: ansible_os_family == "Debian"
 
     - name: Upgrade all packages on servers
       apt: upgrade=dist force_apt_get=yes
+      when: ansible_os_family == "Debian"
 
     - name: Check if a reboot is needed on all servers
       register: reboot_required_file
