updated cache before update CentOs

--- a/update_dist.yml
+++ b/update_dist.yml
@@ -8,7 +8,7 @@
         update_cache: yes
         name: '*'
         state: latest
-      when: ansible_os_family == "CentOs"
+      when: ansible_os_family == "RedHat"
 
     - name: Update apt repo and cache on all Debian/Ubuntu boxes
       apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
